# Documetn-grant

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  seed.py
.github/workflows/: cicd.yml
alembic/: env.py
alembic/versions/: 1516623ae03e_update_user_grant_relationships.py  cbb08aabc4d3_update_user_grant_relationships.py
app/api/: dependencies.py  grants.py
app/config/: admin.py  db.py
app/crud/: base.py  grant.py
app/models/: __init__.py  document.py  grant.py  user.py
app/schema/: document.py  grant.py  user.py
tests/: conftest.py  test_api.py  test_database_config.py  test_unit.py
