[tool.poetry]
name = "document-grant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
sqlalchemy = {version = "^2.0.25", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = {version = "^2.6.1", extras = ["email"]}
uvicorn = "^0.27.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
